# ffmpeg_test

./: build.gradle  settings.gradle  技术栈记录.txt
Base/: build.gradle
Base/src/main/java/com/example/base/: CommonConfig.kt  MyApplication.kt  SystemSugar.kt
Base/src/main/res/layout/: view_centered_recycle.xml
android_media_lib/: build.gradle
android_media_lib/src/androidTest/java/com/example/android_media_lib/: ExampleInstrumentedTest.kt
android_media_lib/src/main/java/com/example/android_media_lib/: AudioIntroduce.kt  MP4Player.kt  ModelTestEnter.kt  MyAudioRecord.java
android_media_lib/src/test/java/com/example/android_media_lib/: ExampleUnitTest.kt
aop_aspect/: build.gradle
aop_aspect/src/androidTest/java/com/example/aop_aspect/: ExampleInstrumentedTest.kt
aop_aspect/src/main/java/com/example/aop_aspect/: DebugLog.kt  InterceptAspectJ.java  MyAspect.kt
aop_aspect/src/test/java/com/example/aop_aspect/: ExampleUnitTest.kt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_young_ffmpeg_player1_YoungPlayer.h  dn_ffmepg_player.c  ffmpeg_filter.c  ffmpeg_mix.c  ffmpeg_test.cpp  loger.h  native-lib.cpp
app/src/main/res/layout/: activity_main.xml  activity_preview.xml  main_media_test_layout.xml  view_container.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
camera/: build.gradle
camera/src/main/: AndroidManifest.xml
camera/src/main/assets/Shader/: fragment_texture.glsl  vertex_texture.glsl
camera/src/main/res/layout/: activity_glcamera.xml  layout_camera_view.xml
ffmpeg_jni/: build.gradle
ffmpeg_jni/src/main/cpp/: CMakeLists语法学习.txt
gradle/wrapper/: gradle-wrapper.properties
io_model/: build.gradle
opengl/: build.gradle
opengl/src/main/: AndroidManifest.xml
opengl/src/main/java/com/android/: TestOpenGl.kt
opengl/src/main/res/layout/: activity_camera_play_with_opengl.xml  activity_open_gl.xml
opengl/src/main/res/raw/: fragment_texture.glsl  screen_frag.frag  screen_vert_matrix.vert  simple_vertex_shader.glsl
pc/: build.gradle
pc_client/: build.gradle
pc_client/src/main/: AndroidManifest.xml
pc_client/src/main/res/layout/: activity_hilt.xml  activity_main.xml  view_my_test.xml
pc_client/src/main/res/values/: strings.xml  themes.xml
pc_client/src/main/res/values-night/: themes.xml
(+188 files in other folders)
